Fix comment buttons from being illegible

--- a/YuYuYu/partials/colours/design.scss
+++ b/YuYuYu/partials/colours/design.scss
@@ -187,7 +187,7 @@ body .content .sitetable .link .title a:hover,
 .search-result-meta,
 .domain,
 .domain a,
-.entry .buttons li a {
+.link .entry .buttons li a {
   color: getScheme("glossOn");
 }
 
